--- a/resources/test/test.html
+++ b/resources/test/test.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="phantom/function.prototype.bind.js" type="text/javascript"></script>  
     <script src="compiled.js"></script>
 </head>
 </html>
