--- a/resources/test/test.html
+++ b/resources/test/test.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
 <html>
-<head>
+  <body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="phantom/function.prototype.bind.js" type="text/javascript"></script>  
-    <script src="compiled.js"></script>
-</head>
+    <script src="phantom/function.prototype.bind.js" type="text/javascript"></script>
+    <script src="../public/js/main-test.js" type="text/javascript"></script>
+  </body>
 </html>
